              the only effect was that, when enumerating fundamental normal
              surfaces with a non-trivial algorithm flag that did _not_ include
              an explicit Hilbert basis algorithm, the algorithm flag could
              have been ignored (thereby using the default vertex enumeration
              algorithm as the first phase of the primal Hilbert basis method).
        Enum Framing:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., FRAMING_SEIFERT) have been
              renamed as scoped enum values (e.g., Framing::Seifert).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Enum GraphConstraint:
            - New flag type for use with the enumeration of model link graphs.
        Class GraphLoop, GraphPair, GraphTriple:
            - Added a spaceship operator (<=>) for aesthetic comparisons.
              This has the effect of implementing all comparison operators,
              not just less-than (<) as before.
        Struct GroupExpressionTerm:
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class GroupPresentation:
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
        Class HomGroupPresentation:
            - Renamed intelligentSimplify() and intelligentNielsen() to
              simplify() and nielsen() respectively.  The old names are kept
              as deprecated aliases.
        Class HomologicalData:
            - New routine triangulation().
        Enum HyperAlg, HyperAlgFlags:
            - The individual flags now live inside HyperAlg, which is now a
              scoped enumeration for better type safety.  In paticular, the